tests/checker/ok/handle_newtype.can
Counter = Handle

CounterSlot = Option<Counter>

Gauge = Handle

GaugeSlot = Option<Gauge>

Unit => Program {
    None() -> CounterSlot
    None() -> GaugeSlot
    "ok" -> Print
}
